gave images rounded edges

--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -82,8 +82,30 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-                  </div>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/d3,2.PNG" alt="d3,2" /></div>
+                    <h3>d3,2</h3>
+                    <ul>
+                        <li>low, high</li>
+                        <li>enters Hermit stance</li>
+                        <li>punish by lowblocking the low and continue crouching to go under the high</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM3,4.PNG" alt="HRM3,4" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM3.PNG" alt="HRM3" /></div>
+                    <h3>HRM 3,4</h3>
+                    <ul>
+                        <li>low, mid</li>
+                        <li>best low in Hermit stance</li>
+                        <li>mid is -15 on block</li>
+                        <li>punish by low blocking first hit and standing block the 2nd hit</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-bottom: 20px;" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM4,1+2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px"  src="Character Images/Leroy/HRM4.PNG" alt="HRM4" /></div>
+                    <h3>HRM 4,1+2</h3>
+                    <ul>
+                        <li>mid, mid</li>
+                        <li>wall splats</li>
+                        <li>-14 on block</li>
+                    </ul>    
                 </div>
               </div>
               <div class="accordion-item">
