added to about page

--- a/html/about.html
+++ b/html/about.html
@@ -42,51 +42,59 @@
       <h2>Tekken Notation</h2>
       <div id="picture" class="picture-box"><img width="400px" src="controller.png" alt="Controller" /></div>
       <h3>Additional Notation</h3>
-      <table>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Notation</th>
+            <th scope="col">Meaning</th>
+          </tr>
+        </thead>
         <tr>
           <th>Notation</th>
           <th>Meaning</th>
         </tr>
-        <tr>
-          <td>T!</td>
-          <td>Tornado</td>
-        </tr>
-        <tr>
-          <td>WS</td>
-          <td>While Standing</td>
-        </tr>
-        <tr>
-            <td>WR</td>
-            <td>While Running</td>
-        </tr>
-        <tr>
-            <td>SSR</td>
-            <td>Side Step Right</td>
-        </tr>
-        <tr>
-            <td>SSL</td>
-            <td>Side Step Left</td>
-        </tr>
-        <tr>
-            <td>CH</td>
-            <td>Counter Hit</td>
-        </tr>
-        <tr>
-            <td>FC</td>
-            <td>Fully Crouched</td>
-        </tr>
-        <tr>
-            <td>+</td>
-            <td>Press Together (1+2)</td>
-        </tr>
-        <tr>
-            <td>QCF</td>
-            <td>Quarter Circle Forward (d,df,f)</td>
-        </tr>
-        <tr>
-            <td>QCB</td>
-            <td>Quarter Circle Back (d,db,b)</td>
-        </tr>
+        <tbody>
+          <tr>
+            <td>T!</td>
+            <td>Tornado</td>
+          </tr>
+          <tr>
+            <td>WS</td>
+            <td>While Standing</td>
+          </tr>
+          <tr>
+              <td>WR</td>
+              <td>While Running</td>
+          </tr>
+          <tr>
+              <td>SSR</td>
+              <td>Side Step Right</td>
+          </tr>
+          <tr>
+              <td>SSL</td>
+              <td>Side Step Left</td>
+          </tr>
+          <tr>
+              <td>CH</td>
+              <td>Counter Hit</td>
+          </tr>
+          <tr>
+              <td>FC</td>
+              <td>Fully Crouched</td>
+          </tr>
+          <tr>
+              <td>+</td>
+              <td>Press Together (1+2)</td>
+          </tr>
+          <tr>
+              <td>QCF</td>
+              <td>Quarter Circle Forward (d,df,f)</td>
+          </tr>
+          <tr>
+              <td>QCB</td>
+              <td>Quarter Circle Back (d,db,b)</td>
+          </tr>
+        </tbody>
       </table>
     </main>
 
