--- a/CSS/index.html
+++ b/CSS/index.html
@@ -19,7 +19,7 @@
   </head>
   <body class="bg-primary text-light">
     <header class="container-fluid">
-      <nav class="navbar fixed-top navbar-dark">
+      <nav class="navbar sticky-top navbar-dark">
         <a class="navbar-brand" href="#">Iron Fist Data</a>
         <menu class="navbar-nav">
           <li class="nav-item">
