fixed table on about page

--- a/CSS/about.html
+++ b/CSS/about.html
@@ -36,69 +36,68 @@
     </header>
 
     <main class="container-fluid bg-light text-center" >
+        <br><br>
+        <div id="picture" class="picture-box"><h2>Tekken Notation</h2><img width="400px" src="controller.png" alt="Controller" /></div>
         <p>
           Tekken is one of the most difficult fighting games to learn. Each of the 30+ characters have more than 100 different moves,
-          some even having 200. For a new player this amount of moves can be incredibly overwelming.
-        </p>
-  
-        <p>
-          This is where Iron Fist Data comes in. On here you can select a character to see what their best moves are and how to beat them.
-          Additionally you can add counter play that you have found with your own character to deal with a certain move. 
+          some even having 200. For a new player this amount of moves can be incredibly overwelming. <strong>This is where Iron Fist Data comes in.</strong>
         </p>
         <hr />
-        <h2>Tekken Notation</h2>
-        <div id="picture" class="picture-box"><img width="400px" src="controller.png" alt="Controller" /></div>
+        
+        <br><br>
         <h3>Additional Notation</h3>
-        <table class="table table-striped">
-          <thead>
-            <tr>
-              <th scope="col">Notation</th>
-              <th scope="col">Meaning</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>T!</td>
-              <td>Tornado</td>
-            </tr>
-            <tr>
-              <td>WS</td>
-              <td>While Standing</td>
-            </tr>
-            <tr>
-                <td>WR</td>
-                <td>While Running</td>
-            </tr>
-            <tr>
-                <td>SSR</td>
-                <td>Side Step Right</td>
-            </tr>
-            <tr>
-                <td>SSL</td>
-                <td>Side Step Left</td>
-            </tr>
-            <tr>
-                <td>CH</td>
-                <td>Counter Hit</td>
-            </tr>
-            <tr>
-                <td>FC</td>
-                <td>Fully Crouched</td>
-            </tr>
-            <tr>
-                <td>+</td>
-                <td>Press Together (1+2)</td>
-            </tr>
-            <tr>
-                <td>QCF</td>
-                <td>Quarter Circle Forward (d,df,f)</td>
-            </tr>
-            <tr>
-                <td>QCB</td>
-                <td>Quarter Circle Back (d,db,b)</td>
-            </tr>
-          </tbody>
-        </table>
+        <div class="divFloat">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th scope="col">Notation</th>
+                <th scope="col">Meaning</th>
+              </tr>
+            </thead>
+            <tbody class="table-group-divider">
+              <tr>
+                <td>T!</td>
+                <td>Tornado</td>
+              </tr>
+              <tr>
+                <td>WS</td>
+                <td>While Standing</td>
+              </tr>
+              <tr>
+                  <td>WR</td>
+                  <td>While Running</td>
+              </tr>
+              <tr>
+                  <td>SSR</td>
+                  <td>Side Step Right</td>
+              </tr>
+              <tr>
+                  <td>SSL</td>
+                  <td>Side Step Left</td>
+              </tr>
+              <tr>
+                  <td>CH</td>
+                  <td>Counter Hit</td>
+              </tr>
+              <tr>
+                  <td>FC</td>
+                  <td>Fully Crouched</td>
+              </tr>
+              <tr>
+                  <td>+</td>
+                  <td>Press Together (1+2)</td>
+              </tr>
+              <tr>
+                  <td>QCF</td>
+                  <td>Quarter Circle Forward (d,df,f)</td>
+              </tr>
+              <tr>
+                  <td>QCB</td>
+                  <td>Quarter Circle Back (d,db,b)</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
     </main>
 
     <footer class="bg-dark text-white-50">
