--- a/html/about.html
+++ b/html/about.html
@@ -31,12 +31,7 @@
     <main>
       <p>
         Tekken is one of the most difficult fighting games to learn. Each of the 30+ characters have more than 100 different moves,
-        some even having 200. For a new player this amount of moves can be incredibly overwelming.
-      </p>
-
-      <p>
-        This is where Iron Fist Data comes in. On here you can select a character to see what their best moves are and how to beat them.
-        Additionally you can add counter play that you have found with your own character to deal with a certain move. 
+        some even having 200. For a new player this amount of moves can be incredibly overwelming.<strong>This is where Iron Fist Data comes in.</strong>
       </p>
       <hr />
       <h2>Tekken Notation</h2>
