fixed margin on pictures

--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -82,29 +82,38 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/d3,2.PNG" alt="d3,2" /></div>
-                    <h3>d3,2</h3>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Reyna/ff2.PNG" alt="ff2" /></div>
+                    <h3>ff2</h3>
                     <ul>
-                        <li>low, high</li>
-                        <li>enters Hermit stance</li>
-                        <li>punish by lowblocking the low and continue crouching to go under the high</li>
-                    </ul>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM3,4.PNG" alt="HRM3,4" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM3.PNG" alt="HRM3" /></div>
-                    <h3>HRM 3,4</h3>
-                    <ul>
-                        <li>low, mid</li>
-                        <li>best low in Hermit stance</li>
-                        <li>mid is -15 on block</li>
-                        <li>punish by low blocking first hit and standing block the 2nd hit</li>
+                        <li>12f mid</li>
+                        <li>common approach tool</li>
+                        <li>enters Sentai stance</li>
+                        <li>+2 on block</li>
                     </ul>
                     <br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-bottom: 20px;" src="Character Images/Leroy/HRM4,1+2.PNG" alt="HRM4,1+2" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px"  src="Character Images/Leroy/HRM4.PNG" alt="HRM4" /></div>
-                    <h3>HRM 4,1+2</h3>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Reyna/SEN2.PNG" alt="SEN 2" /></div>
+                    <h3>SEN 2</h3>
                     <ul>
-                        <li>mid, mid</li>
-                        <li>wall splats</li>
-                        <li>-14 on block</li>
+                        <li>fast mid option</li>
+                        <li>safe on block</li>
+                        <li>can SSL to punish</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Reyna/SEN3.PNG" alt="SEN 3" /></div>
+                    <h3>SEN 3</h3>
+                    <ul>
+                        <li>fast high</li>
+                        <li>tracks left and right</li>
+                        <li>+1 on block</li>
+                        <li>can duck and punish</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px; margin-bottom: 20px;" src="Character Images/Reyna/SEN3+4.PNG" alt="SEN 3+4" /></div>
+                    <h3>SEN 3+4</h3>
+                    <ul>
+                        <li>best low from Sentai stance</li>
+                        <li>-15 on block</li>
+                        <li>tracks left and right</li>
                     </ul>    
                 </div>
               </div>
