--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -38,7 +38,7 @@
     <main class="container-fluid bg-secondary">
         <br>
         <div class="bd-example">
-            <div class="accordion" id="accordionExample">
+            <div class="accordion" style= "width:1450px" id="accordionExample">
               <div class="accordion-item">
                 <h2 class="accordion-header" id="headingOne">
                   <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -52,7 +52,7 @@
                     <ul>
                         <li>low, high</li>
                         <li>enters Hermit stance</li>
-                        <li>punish by lowblocking the low and continue crouching to go under the high</li>
+                        <li>You can punish this attack by lowblocking the first hit then staying crouched to duck under the high. After the high whiffs you can launch punish for a full combo.</li>
                     </ul>
                     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
                     <div id="picture" class="picture-box"><img width="400px" height="400px" src="Character Images/Leroy/HRM3,4.PNG" alt="HRM3,4" id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 10px" src="Character Images/Leroy/HRM3.PNG" alt="HRM3" /></div>
@@ -125,7 +125,7 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                    
                   </div>
                 </div>
               </div>
