added steve to characters page

--- a/CSS/characters.html
+++ b/CSS/characters.html
@@ -125,7 +125,38 @@
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse show" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                   <div class="accordion-body">
-                    
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Steve/ub2.PNG" alt="ff2" /></div>
+                    <h3>ub2</h3>
+                    <ul>
+                        <li>high tracking move</li>
+                        <li>Enters Lion Heart stacne</li>
+                        <li>+3 on block</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Steve/LNH1.PNG" alt="SEN 2" /></div>
+                    <h3>LNH 1</h3>
+                    <ul>
+                        <li>14f heat engager</li>
+                        <li>-4 on block</li>
+                        <li>tracks to both sides</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px;" src="Character Images/Steve/LNH2.PNG" alt="SEN 3" /></div>
+                    <h3>LNH 2</h3>
+                    <ul>
+                        <li>mid launcher</li>
+                        <li>-12 on block</li>
+                        <li>can SSR and punish</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <div id="picture" class="picture-box"><img width="400px" height="400px" style="margin-right: 200px; margin-bottom: 20px;" src="Character Images/Steve/LNH1+2.PNG" alt="SEN 3+4" /></div>
+                    <h3>LNH 1+2</h3>
+                    <ul>
+                        <li>Unblockable high</li>
+                        <li>can duck and punish</li>
+                        <li>can SSR and SSL to punish</li>
+                    </ul>
+                    <br><br><br><br><br><br><br><br><br><br><br>    
                   </div>
                 </div>
               </div>
